# landuo

./: .gitignore  .readthedocs.yml  README.md  __init__.py  _internals.py  _lpnotusedict.py  _lpusedict.py  exceptions.py  lazyproperty.py  mkdocs.yml  pyproject.toml  setup.py
docs/: README.md  installation.md  quickstart.md  requirements.txt
docs/APIs/: cachedproperty.md  lazyproperty.md
docs/DEV/: dev_notes.md
examples/: person_inbuilt_property.py
src/: _lpusedict.py  _states.py  lazyproperty.py
src/landuo/: __init__.py  _lpnotusedict.py  _lpusedict.py  cachedproperty.py  exceptions.py  lazyproperty.py
src/tests/: test_calculations.py  test_deleter.py  test_getter.py  test_setter.py
