[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landuo"
version = "0.2.0"
description = "lazyproperty = property + cached_property"
readme = "README.md"
authors = [{ name = "Jim Chng", email = "jimchng@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["lazy-property", "lazy", "property", "cached", "cached-property", "cached_property", "lazy_property"]
dependencies = [ ]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/landuo-developers/landuo"

[project.scripts]

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
# "setup.py" = [
#     '__version__ = "{version}"',
# ]
"README.md" = [
    "Version: {version}",
]

